fix overlapping buttons and layouts

--- a/app/javascript/stylesheets/_custom_sections.scss
+++ b/app/javascript/stylesheets/_custom_sections.scss
@@ -12,6 +12,9 @@
 .custom-sections {
   & > * {
     position: relative;
+    @media (max-width: 1023px) {
+      padding-top: spacer(8);
+    }
 
     > [role="toolbar"] {
       display: flex;
